refactor codice, cleanup test