@@ -1,11 +1,11 @@
 package ingegneria_dei_dati;
 
 import ingegneria_dei_dati.index.IndexHandler;
+import ingegneria_dei_dati.index.QueryResults;
 import ingegneria_dei_dati.sample.SamplesHandler;
 import ingegneria_dei_dati.table.Column;
-import ingegneria_dei_dati.tableUtilities.ColumnStats;
 import ingegneria_dei_dati.tableUtilities.TableExpander;
-import org.junit.Before;
+import org.junit.BeforeClass;
 import org.junit.Test;
 
 import java.io.IOException;
@@ -15,49 +15,54 @@ import java.util.List;
 import static org.junit.Assert.assertEquals;
 
 public class TestColumnExpander {
-    private final String testIndexPath = "test-index";
-    private List<Column> columns;
-    @Before
-    public void InitializeColumns() throws IOException {
+    private static final String testIndexPath = "test-index";
+    private static List<Column> columns;
+    private static TableExpander tableExpander;
+    @BeforeClass
+    public static void InitializeColumns() throws IOException {
         columns = new ArrayList<>();
+        // auto
         columns.add(new Column().setTableName("auto").setColumnName("marca").setFields(List.of(new String[]{"audi", "bmw", "mercedes", "fiat", "seat",
                 "opel", "renault", "ferrari", "porsche", "lamborghini"})));
         columns.add(new Column().setTableName("fiat").setColumnName("auto").setFields(List.of(new String[]{"fiat", "panda", "punto", "500"})));
         columns.add(new Column().setTableName("auto").setColumnName("audi").setFields(List.of(new String[]{"audi", "audi", "audi", "audi", "audi", "audi"})));
         columns.add(new Column().setTableName("auto costose").setColumnName("marche").setFields(List.of(new String[]{"audi", "bmw", "mercedes",
                 "ferrari", "lamborghini"})));
+        // bibite
         columns.add(new Column().setTableName("bibite").setColumnName("marche").setFields(List.of(new String[]{"cocacola", "fanta", "fanta", "sprite",
                 "7up", "pepsi"})));
         columns.add(new Column().setTableName("cocacola").setColumnName("nome").setFields(List.of(new String[]{"cocacola", "cocacola", "cocacola"})));
         columns.add(new Column().setTableName("bibite cocacola").setColumnName("marche").setFields(List.of(new String[]{"cocacola", "fanta", "sprite"})));
         columns.add(new Column().setTableName("bibite pepsi").setColumnName("marche").setFields(List.of(new String[]{"7up", "pepsi"})));
-        IndexHandler indexHandler = new IndexHandler(this.testIndexPath);
+        IndexHandler indexHandler = new IndexHandler(testIndexPath);
         indexHandler.createIndex(columns);
+        tableExpander = new TableExpander(testIndexPath);
     }
     @Test
-    public void testMyColumns() throws IOException {
-        TableExpander tableExpander = new TableExpander(testIndexPath);
-        // auto
-        List<ColumnStats> columnStats = tableExpander.searchForColumnExpansion(columns.get(0).fieldsStringRepresentation(),1).getColumnsStats();
-        ColumnStats column0 = columnStats.get(0);
-        assertEquals(column0.getTableId(), columns.get(0).getTableName());
-        assertEquals(column0.getColumnId(), columns.get(0).getColumnName());
-        assertEquals(1, column0.getColumnScore(), 0.0);
-        ColumnStats column1 = columnStats.get(1);
-        assertEquals(column1.getTableId(), "auto costose");
-        assertEquals(column1.getColumnId(), "marche");
-        assertEquals(0.5, column1.getColumnScore(), 0.0);
-        // bibite
-        System.out.println(tableExpander.searchForColumnExpansion(columns.get(4).fieldsStringRepresentation(),1));
-        columnStats = tableExpander.searchForColumnExpansion(columns.get(4).fieldsStringRepresentation(),1).getColumnsStats();
-        column0 = columnStats.get(0);
-        assertEquals(column0.getTableId(), columns.get(4).getTableName());
-        assertEquals(column0.getColumnId(), columns.get(4).getColumnName());
-        assertEquals(1, column0.getColumnScore(), 0.0);
-        column1 = columnStats.get(1);
-        assertEquals(column1.getTableId(), "bibite cocacola");
-        assertEquals(column1.getColumnId(), "marche");
-        assertEquals(0.66, column1.getColumnScore(), 0.01);
+    public void testAuto() throws IOException {
+        QueryResults results = tableExpander.searchForColumnExpansion(columns.get(0));
+        QueryResults.Result selfResult = results.getResults().getFirst();
+        assertEquals(selfResult.tableName, columns.get(0).getTableName());
+        assertEquals(selfResult.columnName, columns.get(0).getColumnName());
+        assertEquals(1, selfResult.queryScore, 0.0);
+
+        QueryResults.Result bestResult = results.getBestResult();
+        assertEquals(bestResult.tableName, "auto costose");
+        assertEquals(bestResult.columnName, "marche");
+        assertEquals(0.5, bestResult.queryScore, 0.0);
+    }
+    @Test
+    public void testBibite() throws IOException {
+        QueryResults results = tableExpander.searchForColumnExpansion(columns.get(4));
+        QueryResults.Result selfResult = results.getResults().getFirst();
+        assertEquals(selfResult.tableName, columns.get(4).getTableName());
+        assertEquals(selfResult.columnName, columns.get(4).getColumnName());
+        assertEquals(1, selfResult.queryScore, 0.0);
+
+        QueryResults.Result bestResult = results.getBestResult();
+        assertEquals(bestResult.tableName, "bibite cocacola");
+        assertEquals(bestResult.columnName, "marche");
+        assertEquals(0.66, bestResult.queryScore, 0.01);
     }
     @Test
     public void testSample() throws IOException {
@@ -65,8 +70,17 @@ public class TestColumnExpander {
         assertEquals(columns.size(), 1000);
         String indexPath = "index";
         TableExpander tableExpander = new TableExpander(indexPath);
-        for(Column column : columns.subList(0,2)){
-            System.out.println(tableExpander.searchForColumnExpansion(column.fieldsStringRepresentation(),1).toString());
+        int i=1;
+        for(Column column : columns){
+            QueryResults results = tableExpander.searchForColumnExpansion(column);
+            QueryResults.Result selfResult = results.getResults().get(0);
+            if (selfResult.queryScore != 1) {
+                System.out.println("sample number " + i + " failed check");
+                System.out.println(column);
+                System.out.println(results);
+            }
+            assertEquals(1, selfResult.queryScore, 0.0);
+            i+=1;
         }
     }
 }
